--- a/proyecto/inputwindow.ui
+++ b/proyecto/inputwindow.ui
@@ -27,9 +27,9 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>1080</x>
-      <y>30</y>
-      <width>121</width>
+      <x>1070</x>
+      <y>40</y>
+      <width>151</width>
       <height>16</height>
      </rect>
     </property>
@@ -65,7 +65,7 @@
    <widget class="QDoubleSpinBox" name="xmax">
     <property name="geometry">
      <rect>
-      <x>1220</x>
+      <x>1200</x>
       <y>90</y>
       <width>62</width>
       <height>22</height>
@@ -193,7 +193,7 @@
    <widget class="QDoubleSpinBox" name="xmax_2">
     <property name="geometry">
      <rect>
-      <x>1220</x>
+      <x>1200</x>
       <y>160</y>
       <width>62</width>
       <height>22</height>
@@ -225,17 +225,54 @@
      <string>Hasta</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_8">
+   <widget class="QWidget" name="formLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>1090</x>
-      <y>340</y>
-      <width>91</width>
-      <height>16</height>
+      <x>60</x>
+      <y>120</y>
+      <width>160</width>
+      <height>80</height>
+     </rect>
+    </property>
+    <layout class="QFormLayout" name="formLayout"/>
+   </widget>
+   <widget class="QLabel" name="labelClasificacion">
+    <property name="geometry">
+     <rect>
+      <x>930</x>
+      <y>300</y>
+      <width>391</width>
+      <height>231</height>
      </rect>
     </property>
     <property name="text">
-     <string>Puntos críticos</string>
+     <string>TextLabel</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>920</x>
+      <y>610</y>
+      <width>151</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Guardar y Salir</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_2">
+    <property name="geometry">
+     <rect>
+      <x>1160</x>
+      <y>610</y>
+      <width>151</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Salir</string>
     </property>
    </widget>
   </widget>
@@ -245,7 +282,7 @@
      <x>0</x>
      <y>0</y>
      <width>1366</width>
-     <height>22</height>
+     <height>23</height>
     </rect>
    </property>
   </widget>
